# mcp_dip

./: .env.example  .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml
.streamlit/: config.toml
src/backend/: dip_server.py
src/frontend/: chat_with_mcp.py  parliment_analysis.py
